- bugfix: task action button was not visible in ios

--- a/src/content/themes/default/mobile.css
+++ b/src/content/themes/default/mobile.css
@@ -42,6 +42,7 @@ body[dir="rtl"] .task-note-block { border-left:none; border-right:1px solid #777
 #tasklist li.clicked .task-through { white-space:normal; display:inline; }
 #tasklist li.clicked.task-has-note .task-note-block { display:block; }
 #tasklist li.clicked.doubleclicked.task-has-note .task-note-block { display:none; }
+#tasklist li.clicked .taskactionbtn { visibility:visible; }
 .task-toggle { display:none; }
 #tasklist .mtt-task-placeholder { line-height:1rem; padding-top:0.6rem; padding-bottom:0.6rem; }
 #tasklist .ui-sortable-helper { box-shadow:0px 0px 3px #333; }
